# parquet-format

./: Cargo.toml  shell.nix
src/: parquet_format.rs
src/thrift/: errors.rs
src/thrift/protocol/: compact.rs  compact_stream.rs  compact_stream_write.rs  compact_write.rs  mod.rs
